From c8b09de (master):
=====================

In prisim/interferometry.py,

(*) In member function append-settings() of class ROI_parameters, there
was no option to handle achromatic beams when the beams were to be
determined analytically. Now it accepts beam chromaticity parameters in
input roi_info and computes analystical beam at specified frequency and
propagates it to all frequencies

In scripts/run_prisim.py,

(*) Beam chromaticity information in case of analytical beams was not
being passed on to the ROI parameters in call to roi.append_settings()
which is now passed
(*) Minor changes to chunk completion time by process

In prisim/delay_spectrum.py,

(*) In member function beam3Dvol() of class DelayPowerSpectrum, update
code block to determine achromatic analytical beams.

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), ensure the input frequency
is converted to a numpy array of non-zero length even if input as a
scalar. Update function docstring accordingly

From ba17ed5 (closure-adv):
==========================

(*) Add prisim/scriptUtils/write_PRISim_bispectrum_phase_to_npz_util.py
to repo

In prisim/scriptUtils/replicatesim_util.py,
(*) Minor cosmetic changes

In scripts/write_PRISim_bispectrum_phase_to_npz.py,

(*) Move some imported modules and main code block to reside in
prisim/scriptUtils/write_PRISim_bispectrum_phase_to_npz_util.py

From a203161 (replicatesim):
===========================

(*) Add folder prisim/scriptUtils/ to repo
(*) Add prisim/scriptUtils/replicatesim_util.py to repo

In scripts/replicatesim.py,

(*) Move some imported modules and function replicate() to reside in
prisim/scriptUtils/replicatesim_util.py

From 234d167 (master):
=====================

In scripts/replicatesim.py,

(*) Remove unused import of h5py
(*) Restructure __main__ block to call a function replicate() by
passing the parameters
(*) Insert an option to go into debug mode before calling replicate()

In examples/simparms/replicatesim.yaml,
